# generate_wit

./: Cargo.toml  LICENSE  README.md
.github/workflows/: rust.yml
crates/chumsky_semver/: Cargo.toml
crates/chumsky_semver/src/: lib.rs
crates/wit_format/: Cargo.toml  readme.md
crates/wit_format/src/: lexer.rs  lib.rs  spec.rs
