[package]
name = "wit_format"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
semver = "1.0"
chumsky = "1.0.0-alpha.6"
chumsky_semver = { path = "../chumsky_semver" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"